# alsa-brigde

./: .gitignore  .gitmodules  CMakeLists.txt  audio_bridge.cpp
effects/: highpass.cc  highpass.hh  reverb.cc  reverb.hh  vibeverb.cc  vibeverb.hh
fx/: moving_average.c
src/: audio_bridge.cpp  audio_config.cpp  device_setup.cpp  link_sync.cpp  loudness_meter.cpp  mcp3008.c  process_audio.cpp  process_block_mmap.cpp  stream_format.cpp  trance_gate.cpp
src/effects/: reverb.cpp  reverb.hpp
src/include/: audio_config.hpp  device_setup.hpp  link_sync.hpp  loudness_meter.hpp  mcp3008.h  process_audio.hpp  process_block_mmap.hpp  stream_format.hpp  trance_gate.hpp
src/io/: mcp3008.c
tests/: test_e2e.cc  test_process_block.cpp  test_reverb_tail_continuity.cpp
